--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.android.farmstudio">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/sq"
@@ -9,7 +11,9 @@
         android:roundIcon="@mipmap/sq"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".index"></activity>
+        <activity android:name=".Cities"></activity>
+        <activity android:name=".Weather" />
+        <activity android:name=".index" />
         <activity android:name=".States" />
         <activity android:name=".MainActivity">
             <intent-filter>
